# meme-data-crawler

./: Cargo.toml
src/: crawler.rs  dedup.rs  fetcher.rs  file_manager.rs  main.rs  parser.rs  types.rs
src/crawler/: downloader.rs  engine.rs  mod.rs  types.rs
src/reverse_search/: engine.rs  mod.rs  trait_def.rs  types.rs  utils.rs
src/reverse_search/services/: bing.rs  google.rs  google_vision.rs  mod.rs  tineye.rs
