[package]
name = "meme-data-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "cookies"], default-features = false }
# http parser
scraper = "0.24.0"
# async
tokio = { version = "1.47.1", features = [ "full" ] }
# serialize
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# error handler
anyhow = "1.0.100"
# hash
sha2 = "0.10.9"
# timestamp
chrono = { version = "0.4.42", features = ["serde"] }
# progress line UI
indicatif = "0.18.0"
# 限流
governor = "0.10.1"
# URL encoding
urlencoding = "2.1.3"
async-trait = "0.1.89"

